Fixed contact footer spacing

--- a/assets/css/sticky-footer-navbar.css
+++ b/assets/css/sticky-footer-navbar.css
@@ -7,7 +7,7 @@ html {
 
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 20%;
+  margin-bottom: 22%;
 }
 .footer {
   position: absolute;
